# jupyter-ai-magic-commands

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package.json  pyproject.toml
.github/workflows/: check-release.yml
jupyter_ai_magic_commands/: __init__.py  magics.py  parsers.py  persona_handler.py
jupyter_ai_magic_commands/tests/: __init__.py  test_magics.py
