[build-system]
requires = ["hatchling>=1.4.0"]
build-backend = "hatchling.build"

[project]
name = "jupyter_ai_magic_commands"
readme = "README.md"
description = "Package providing Jupyter AI magic commands in IPython"
authors = [{ name = "Project Jupyter", email = "jupyter@googlegroups.com" }]
keywords = ["ipython", "ai", "magic-commands"]
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Framework :: Jupyter",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dynamic = ["version"]

dependencies = [
    "ipython",
    # pydantic <2.10.0 raises a "protected namespaces" error in JAI
    # - See: https://docs.pydantic.dev/latest/api/config/#pydantic.config.ConfigDict.protected_namespaces
    "pydantic>=2.10.0,<3",
    "click>=8.1.0,<9",
    "jupyter_ai_litellm>=0.0.2",
]

[project.urls]
Documentation = "https://jupyter-ai.readthedocs.io/en/v3/"
Source = "https://github.com/jupyter-ai-contrib/jupyter-ai-magic-commands"
Tracker = "https://github.com/jupyter-ai-contrib/jupyter-ai-magic-commands/issues"

[project.optional-dependencies]
dev = [
    # used to run our linters and formatters locally
    "pre-commit>=3.3.3,<4",
    # used to test release scripts
    "jupyter_releaser",
    "tomlkit",
]

test = ["coverage", "pytest", "pytest-asyncio", "pytest-cov"]

all = [
    # Required for using Amazon Bedrock
    "boto3",
]

[tool.hatch.version]
path = "jupyter_ai_magic_commands/__init__.py"
